--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 project(gc_proxy)
 
+
 # should be bin dir on windows, doesn't matter on linux or macos
 set(PROXY_DIR CACHE STRING "Directory to output executable to")
 
@@ -14,6 +15,9 @@ set(PROXY_NAME CACHE STRING "Exectable name (csgo, hl2...)")
 set(SRC_DIR ${CMAKE_CURRENT_LIST_DIR})
 
 if (MSVC)
+	# urgh
+	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:mainCRTStartup")
+
 	add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
 	
 	# don't crash on machines with a lot of ram
