--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,29 +2,14 @@ cmake_minimum_required(VERSION 3.15)
 
 set(CMAKE_CXX_STANDARD 17)
 
-project(gc_proxy)
+project(cs2_patch)
 
-
-# should be bin dir on windows, doesn't matter on linux or macos
-set(PROXY_DIR CACHE STRING "Directory to output executable to")
-
-# only relevant on windows, on linux and macos we build libgc_proxy.so/dylib
-# and load it with LD_PRELOAD/DYLD_INSERT_LIBRARIES
-set(PROXY_NAME CACHE STRING "Exectable name (csgo, hl2...)")
+set(OUT_DIR CACHE STRING "Directory to output executable to")
 
 set(SRC_DIR ${CMAKE_CURRENT_LIST_DIR})
 
 if (MSVC)
-	# urgh
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:mainCRTStartup")
-
-	add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
-	
-	# don't crash on machines with a lot of ram
-	add_link_options(/LARGEADDRESSAWARE)
-	
-	# newer csgo builds use several gigabytes of stack
-	add_link_options(/STACK:1572864)
 endif()
 
-add_subdirectory(proxy)
+add_subdirectory(launcher)
